# ChangeLog for www-apache/mod_mono
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_mono/ChangeLog,v 1.71 2010/10/15 06:49:15 ali_bush Exp $

  15 Oct 2010; Alistair Bush <ali_bush@gentoo.org> mod_mono-2.8.ebuild:
  Remove unrequired use flag aspnet2 and fix bug #340755.

*mod_mono-2.8 (08 Oct 2010)

  08 Oct 2010; Alistair Bush <ali_bush@gentoo.org> +mod_mono-2.8.ebuild:
  Version Bump.

  07 Oct 2010; Pacho Ramos <pacho@gentoo.org> -files/1.2.4/70_mod_mono.conf,
  -mod_mono-1.2.4.ebuild, -mod_mono-2.0.ebuild,
  -files/1.2.6/70_mod_mono.conf, -mod_mono-1.2.6-r1.ebuild,
  -mod_mono-2.0.9999.ebuild, -files/1.9/70_mod_mono.conf,
  -mod_mono-2.4.2.ebuild, -files/mono_auto_application_aspnet2.patch,
  -mod_mono-2.4.9999.ebuild:
  Remove old.

  12 Sep 2010; Joseph Jezak <josejx@gentoo.org> mod_mono-2.6.3.ebuild:
  Marked ppc for bug #327279.

  12 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  mod_mono-2.6.3.ebuild:
  stable x86, bug 327279

  09 Jul 2010; Pacho Ramos <pacho@gentoo.org> mod_mono-2.6.3.ebuild:
  amd64 stable, bug 327279

*mod_mono-2.6.3 (04 Jul 2010)

  04 Jul 2010; Pacho Ramos <pacho@gentoo.org> -files/1.2.1/70_mod_mono.conf,
  -mod_mono-1.2.1.ebuild, -mod_mono-2.6.ebuild, +mod_mono-2.6.3.ebuild:
  Version bump, remove old.

  27 Feb 2010; Patrick Lauer <patrick@gentoo.org>
  +files/mono26_auto_application_aspnet2.patch, mod_mono-2.6.ebuild:
  Rebased patch for #307109

*mod_mono-2.6 (27 Feb 2010)

  27 Feb 2010; Patrick Lauer <patrick@gentoo.org> +mod_mono-2.6.ebuild:
  Bump

  27 Sep 2009; nixnut <nixnut@gentoo.org> mod_mono-2.4.2.ebuild:
  ppc stable #284306

  19 Sep 2009; Markus Meier <maekke@gentoo.org> mod_mono-2.4.2.ebuild:
  amd64/x86 stable, bug #284306

  02 Sep 2009; Peter Alfredsen <loki_val@gentoo.org>
  -mod_mono-2.2-r1.ebuild, -mod_mono-2.2.9999.ebuild, -mod_mono-2.4.ebuild:
  Drop old

*mod_mono-2.4.2 (30 Jun 2009)
