@@ -1,6 +1,13 @@
 # ChangeLog for www-apache/mod_mono
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_mono/ChangeLog,v 1.71 2010/10/15 06:49:15 ali_bush Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_mono/ChangeLog,v 1.72 2011/01/25 18:00:33 pacho Exp $
+
+*mod_mono-2.8.2 (25 Jan 2011)
+
+  25 Jan 2011; Pacho Ramos <pacho@gentoo.org> -mod_mono-2.8.ebuild,
+  +mod_mono-2.8.2.ebuild, -mod_mono-9999.ebuild:
+  Version bump, remove old testing and 9999 version since it's not really
+  maintained downstream.
 
   15 Oct 2010; Alistair Bush <ali_bush@gentoo.org> mod_mono-2.8.ebuild:
   Remove unrequired use flag aspnet2 and fix bug #340755.
